@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/OS/os.h-FreeBSD,v 1.3 2006/03/16 12:25:24 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/OS/os.h-FreeBSD,v 1.4 2009/11/16 19:15:36 nm4 Exp $ */
 
 /* Exim: OS-specific C header file for FreeBSD */
 
@@ -7,6 +7,8 @@
 #define HAVE_MMAP
 #define HAVE_SYS_MOUNT_H
 #define SIOCGIFCONF_GIVES_ADDR
+#define HAVE_SRANDOMDEV
+#define HAVE_ARC4RANDOM
 
 typedef struct flock flock_t;
 
