@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.595 2009/11/16 19:10:45 nm4 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.596 2009/11/16 19:15:36 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -9,6 +9,8 @@ Exim version 4.71
 TK/01 Bugzilla 912: Fix DKIM segfault on empty headers/body
 
 NM/01 Bugzilla 913: Documentation fix for gnutls_* options.
+
+NM/02 Bugzilla 722: Documentation for randint.  Better randomness defaults.
 
 
 Exim version 4.70
